# zerocal

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  Shuttle.toml
.github/workflows/: ci.yml  deploy.yml
src/: bin.rs  cal.rs  lib.rs  time.rs
static/: index.html
