[package]
name = "zerocal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zerocal"
path = "src/bin.rs"

[dependencies]
axum = "0.5"
chrono = "0.4.22"
dateparser = "0.1.7"
humantime = "2.1.0"
icalendar = "0.13.1"
shuttle-service = { version = "0.5.2", features = ["web-axum"], optional = true }
sync_wrapper = "0.1"
tokio = {version = "1.21.2", features = ["full"], optional = true }

[features]
default = ["shuttle"]
shuttle = ["shuttle-service"]
local = ["dep:tokio"]
