[package]
name = "zerocal"
version = "0.1.0"
edition = "2021"
authors = ["Matthias Endler <matthias@endler.dev>"]
description = "A serverless calendar app"
homepage = "https://github.com/mre/zerocal"
repository = "https://github.com/mre/zerocal"
keywords = [
    "calendar",
    "shuttle",
    "shuttle.rs",
]
license = "Apache-2.0/MIT"

[[bin]]
name = "zerocal"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0"
axum = "0.5"
chrono = "0.4.22"
dateparser = "0.1.7"
humantime = "2.1.0"
icalendar = "0.13.1"
shuttle-service = { version = "0.6.0", features = ["web-axum"], optional = true }
sync_wrapper = "0.1"
tokio = {version = "1.20.1", features = ["full"], optional = true }

[features]
default = ["shuttle"]
shuttle = ["shuttle-service"]
local = ["dep:tokio"]
